# stock-overview-dashboard

./: .gitignore  dashboard.py  pyproject.toml  styles.css
components/: chart_candlestick.py  financials_metrics.py  financials_statements.py  financials_waterfall.py  main_sidebar.py  stocks_totallist.py
