[project]
name = "stock-dashboard"
version = "0.1.0"
description = "Dashboard visualizing all relevant data for stock investment."
dependencies = [
    "pandas>=2.3.2",
    "streamlit>=1.48.1",
    "streamlit-lightweight-charts>=0.7.20",
    "streamlit-browser-session-storage>=0.0.12",
    "streamlit-local-storage>=0.0.25",
    "streamlit-screen-stats>=0.0.82",
    "yfinance>=0.2.65",
    "plotly>=6.3.0",
    "watchdog>=6.0.0"
]
